Implement API support

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ app.*.map.json
 macos/Flutter/ephemeral/Flutter-Generated.xcconfig
 macos/Flutter/ephemeral/flutter_export_environment.sh
 macos/Flutter/GeneratedPluginRegistrant.swift
+lib/secrets.dart
